# cuda_template

./: CMakeLists.txt
include/: AddGPU.cuh  add.cuh  add_kernel.cuh  add_kernels.cuh  cuda_utils.h  cufft_utils.h  device_allocator.hpp  managed_allocator_global.hpp  managed_allocator_host.hpp  my_cuda_utils.hpp  my_cufft_utils.hpp  my_file_io_funcs.hpp  my_utils.hpp  pinned_mapped_vector_utils.hpp
src/: AddGPU.cu  add.cu  add_kernel.cu  add_kernels.cu  main.cpp  main.cu  my_cuda_utils.cpp  my_file_io_funcs.cpp  my_utils.cpp  pinned_mapped_vector_utils.cpp
